--- a/time_series/GluonTS/ExtendedForecasting.ipynb
+++ b/time_series/GluonTS/ExtendedForecasting.ipynb
@@ -502,8 +502,8 @@
    "source": [
     "# 创建一个简单的数据集，包含一个target、一个实值动态特征(设置为一个周期前的目标值)和一个静态类特征(指明用于创建目标值的sinusoid类型/不同相)\n",
     "# target: (num_series, num_steps)   target = noise + pattern\n",
-    "# feat_dynamic_real: (num_series,)\n",
-    "# feat_static_cat: (num_series, num_steps) \n",
+    "# feat_dynamic_real: (num_series, num_steps) \n",
+    "# feat_static_cat: (num_series,)\n",
     "def create_dataset(num_series, num_steps, period=24, mu=1, sigma=0.3):\n",
     "    # create target: noise + pattern\n",
     "    # noise\n",
