--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -10,12 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.7.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3613jvsc74a57bd072506cc1e4b0dce5eb876f653d1c5faf29777724f7cbfb23a9a7a2a764425624",
-   "display_name": "Python 3.6.13 64-bit ('lnf': conda)"
+   "name": "python3710jvsc74a57bd0905bede0b9d3779632e1b138e212cea750ec90152560e0dbe1d46137b0a12b61",
+   "display_name": "Python 3.7.10 64-bit ('dynamicgcn': conda)"
   },
   "metadata": {
    "interpreter": {
@@ -26,6 +26,32 @@
  "nbformat": 4,
  "nbformat_minor": 2,
  "cells": [
+  {
+   "source": [
+    "### 基本信息"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "sys.version_info(major=3, minor=7, micro=10, releaselevel='final', serial=0)\nTrue\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "print(sys.version_info)\n",
+    "print(sys.version_info > (3, 0))"
+   ]
+  },
   {
    "source": [
     "### 关键词"
@@ -345,6 +371,62 @@
   },
   {
    "source": [
+    "### 文件及目录操作"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil # 提供了一系列对文件和文件集合的高阶操作\n",
+    "import os\n",
+    "from tensorboardX import SummaryWriter\n",
+    "\n",
+    "log_dir = \"test/\"\n",
+    "if not os.path.exists(log_dir):\n",
+    "    os.makedirs(log_dir)\n",
+    "writer = SummaryWriter(log_dir) # log_dir下会产生一个文件\n",
+    "shutil.rmtree(log_dir) # 递归删除一个目录以及目录内的所有内容，即log_dir消失"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['test/test_glob/1.pkl', 'test/test_glob/2.pkl', 'test/test_glob/3.pkl']\n1.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "import glob\n",
+    "dirname = \"test/test_glob\"\n",
+    "files = glob.glob(dirname+'/*.pkl') # 获取dir下所有的pkl文件\n",
+    "print(files)\n",
+    "print(os.path.basename(files[0])) # 获取文件名"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "os.remove(file)\n",
+    "'''"
+   ]
+  },
+  {
+   "source": [
     "### itertools"
    ],
    "cell_type": "markdown",
@@ -568,6 +650,62 @@
     "#按照value排序\n",
     "vd = collections.OrderedDict(sorted(dd.items(),key=lambda t:t[1]))\n",
     "print(vd)"
+   ]
+  },
+  {
+   "source": [
+    "### numpy"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 3, 4, 0, 2]\n[2, 4, 1, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 打乱顺序\n",
+    "import numpy as np\n",
+    "idx = list(range(5))\n",
+    "np.random.shuffle(idx)\n",
+    "print(idx)\n",
+    "\n",
+    "import random\n",
+    "a = [1,5,2,3,4]\n",
+    "random.shuffle(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[-1 -1 -1 -1 -1 -1  1  1  1  1]\n(array([6, 7, 8, 9]),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numpy.where() 有两种用法：\n",
+    "# 1、np.where(condition, x, y)：满足条件(condition)，输出x，不满足输出y\n",
+    "# 2、np.where(condition)：只有条件 (condition)，没有x和y，则输出满足条件 (即非0) 元素的坐标 (等价于numpy.nonzero)。这里的坐标以tuple的形式给出，通常原数组有多少维，输出的tuple中就包含几个数组，分别对应符合条件元素的各维坐标。\n",
+    "aa = np.arange(10)\n",
+    "print(np.where(aa > 5,1,-1))\n",
+    "print(np.where(aa > 5)) # 返回索引\n",
+    "\n"
    ]
   },
   {
