--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -690,7 +690,7 @@
     "tensor2 = torch.tensor([[0,1], [2,4], [1,2]])\n",
     "print(tensor1.shape)\n",
     "print(tensor2.shape)\n",
-    "# Matrix multiplication: (m*n) * (n*p) -> (m*p).\n",
+    "# Matrix multiplication: (m*n) * (n*p) -> (m*p).  torch.matmul类似，不过torch.mm针对二维矩阵，torch.matmul是高维。当torch.mm用于大于二维时将报错。\n",
     "result1 = torch.mm(tensor1, tensor2)\n",
     "print(result1.shape)\n",
     "\n",
@@ -706,7 +706,8 @@
     "tensor2 = torch.tensor([[0,1,2], [2,4,1]])\n",
     "print(tensor1.shape)\n",
     "print(tensor2.shape)\n",
-    "# Element-wise multiplication.\n",
+    "# Element-wise multiplication.  torch.mul类似\n",
+    "# 当a, b维度不一致时，会自动填充到相同维度相点乘。\n",
     "result3 = tensor1 * tensor2\n",
     "print(result3.shape)"
    ]
