--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,10 +53,11 @@
       ]
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 2
     }
    ],
    "source": [
+    "# torch版本\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -113,6 +114,8 @@
    ],
    "source": [
     "# 张量的创建\n",
+    "# torch.Tensor(size)\n",
+    "# .random_() | .resize_() | .zero_()\n",
     "example = torch.Tensor(2, 3, 4)\n",
     "print(example)\n",
     "print(example.random_(10)) # 0-9\n",
@@ -121,6 +124,90 @@
     "print(r)\n",
     "print(r.zero_())\n",
     "print(example) # 值全变为0，size不变"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([[ 0.6320, -0.0545,  0.9207]])\ntorch.Size([1, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch.randn(size)\n",
+    "a = torch.randn(1, 3)\n",
+    "print(a)\n",
+    "print(a.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([[0.6492, 0.2801],\n        [0.0519, 0.4007]])\ntensor([0.8783, 0.1789, 0.0026, 0.4946])\ntensor([0.9872, 0.0376, 0.4982, 0.6448])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch.rand(size)\n",
+    "print(torch.rand(2,2))\n",
+    "input = torch.tensor([1,2,3,4]).float() \n",
+    "print(torch.rand_like(input)) # 等价于torch.rand(input_size))\n",
+    "print(torch.rand(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([1, 2, 3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch.tensor(example)\n",
+    "a=torch.tensor([1,2,3,4])\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([0, 0, 0, 0])\ntensor([1, 2, 3, 4])\ntensor([[1., 0., 0.],\n        [0., 1., 0.],\n        [0., 0., 1.]])\ntorch.FloatTensor\n"
+     ]
+    }
+   ],
+   "source": [
+    "# .new_zeros() | torch.eye(n)\n",
+    "a=torch.tensor([1,2,3,4])\n",
+    "print(a.new_zeros(a.size(0)))\n",
+    "print(a)\n",
+    "\n",
+    "e = torch.eye(3)\n",
+    "print(e)\n",
+    "print(e.type())"
    ]
   },
   {
@@ -138,8 +225,9 @@
    ],
    "source": [
     "# 张量的统计数据\n",
+    "# .type()/type() | .size()/.shape | .dim() | .numel()\n",
     "print(example.type())\n",
-    "print(example.size()) # tuple的一个子类\n",
+    "print(example.size()) # tuple的一个子类  等价于.shape\n",
     "print(example.dim())\n",
     "print(example.numel())"
    ]
@@ -162,29 +250,6 @@
     "print(a)\n",
     "print(type(a))\n",
     "print(a.type())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "tensor([0, 0, 0, 0])\ntensor([1, 2, 3, 4])\ntensor([[1., 0., 0.],\n        [0., 1., 0.],\n        [0., 0., 1.]])\ntorch.FloatTensor\n"
-     ]
-    }
-   ],
-   "source": [
-    "a=torch.tensor([1,2,3,4])\n",
-    "print(a.new_zeros(a.size(0)))\n",
-    "print(a)\n",
-    "\n",
-    "e = torch.eye(3)\n",
-    "print(e)\n",
-    "print(e.type())"
    ]
   },
   {
@@ -229,26 +294,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "tensor([[0.0104, 0.8584],\n        [0.5867, 0.0192]])\ntensor([0.5084, 0.1369, 0.5194, 0.1493])\ntensor([0.5900, 0.8857, 0.6408, 0.1345])\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(torch.rand(2,2))\n",
-    "input = torch.tensor([1,2,3,4]).float() \n",
-    "print(torch.rand_like(input)) # 等价于torch.rand(input_size))\n",
-    "print(torch.rand(4))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 36,
    "metadata": {},
    "outputs": [
@@ -261,6 +306,7 @@
     }
    ],
    "source": [
+    "# torch.clamp()限制元素值\n",
     "input = torch.tensor([1,2,3,4])\n",
     "print(torch.clamp(input, 2, 3)) # 将输入input张量每个元素的夹紧到区间 [min,max]\n",
     "print(input)"
@@ -321,7 +367,7 @@
     "one_hot.scatter_(dim=1, index=torch.unsqueeze(t, dim=1), src=torch.ones(N, num_classes).long()) # 将src中数据根据index中的索引按照dim的方向填进input中，index为src中的每一个数据指明在input中的dim方向上的索引，index、src和input的另外一个dim的大小要一致\n",
     "print(one_hot)\n",
     "\n",
-    "## scatter_ 放 | gather_ 取\n",
+    "# scatter_ 放 | gather_ 取\n",
     "input = [\n",
     "    [2, 3, 4, 5, 0, 0],\n",
     "    [1, 4, 3, 0, 0, 0],\n",
@@ -329,10 +375,8 @@
     "    [1, 0, 0, 0, 0, 0]\n",
     "]\n",
     "input = torch.tensor(input)\n",
-    "#注意index的类型\n",
-    "length = torch.LongTensor([[4],[3],[5],[1]])\n",
-    "#index之所以减1,是因为序列维度是从0开始计算的\n",
-    "out = torch.gather(input, 1, length-1)\n",
+    "length = torch.LongTensor([[4],[3],[5],[1]]) #注意index的类型\n",
+    "out = torch.gather(input, 1, length-1) #index之所以减1,是因为序列维度是从0开始计算的\n",
     "print(out)"
    ]
   },
@@ -664,6 +708,45 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "### 最值"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([[-0.0049, -0.2433, -0.6449],\n        [ 1.2245, -0.5285,  1.3559],\n        [ 1.1993,  0.4256,  0.9984]])\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "torch.return_types.max(\n",
+       "values=tensor([1.2245, 0.4256, 1.3559]),\n",
+       "indices=tensor([1, 2, 1]))"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "# torch.max\n",
+    "a = torch.randn(3,3)\n",
+    "print(a)\n",
+    "torch.max(a,0) # 按维度dim返回最大值，并且返回索引\n"
+   ]
   },
   {
    "source": [
