add cnn lstm bilstm and resnet

--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 1
     }
    ],
    "source": [
@@ -1024,6 +1024,161 @@
     "pred = linear(x)\n",
     "loss = criterion(pred, y)\n",
     "print('loss after 1 step optimization: ', loss.item())"
+   ]
+  },
+  {
+   "source": [
+    "## torch.nn"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 卷积"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "torch.Size([2, 8, 6, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# torch.nn.Conv2d(channels, output, height_of_filter, width_of_filter) 输入的形状[ batch_size, channels, height_of_image, width_of_image ]\n",
+    "x = torch.randn(2,1,7,3)\n",
+    "conv = torch.nn.Conv2d(1,8,(2,3)) # height_of_filter, width_of_filter也可由一个值kernel_size给出；stride步长参数也可由一个元组或一个值给出\n",
+    "res = conv(x)\n",
+    "print(res.shape) # 输出的高和宽分别是height_of_image-height_of_filter+1, width_of_image-width_of_filter+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "torch.Size([20, 33, 24, 49])\n"
+     ]
+    }
+   ],
+   "source": [
+    "input = torch.randn(20, 16, 50, 100)\n",
+    "m = nn.Conv2d(16, 33, 3, stride=2) # With square kernels and equal stride  \n",
+    "print(m(input).shape)  # 输出的高和宽需要除以stride再+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "torch.Size([20, 33, 28, 100])\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = nn.Conv2d(16, 33, (3, 5), stride=(2, 1), padding=(4, 2)) # padding是在输入的两边添加0\n",
+    "print(m(input).shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "torch.Size([20, 33, 26, 100])\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = nn.Conv2d(16, 33, (3, 5), stride=(2, 1), padding=(4, 2), dilation=(3, 1)) # dilation指核元素之间的Spacing，默认为1，如height_of_filter=(height_of_filter-1)*dilation+1\n",
+    "print(m(input).shape)"
+   ]
+  },
+  {
+   "source": [
+    "### 池化"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 提取重要信息的操作，可以去掉不重要的信息，减少计算开销\n",
+    "# torch.nn.MaxPool2d 参数情况可类比nn.Conv2d"
+   ]
+  },
+  {
+   "source": [
+    "### RNN"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "torch.Size([5, 3, 20]) torch.Size([2, 3, 20]) torch.Size([2, 3, 20])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# nn.LSTM(input_size, hidden_size, num_layers=1, bias=True, batch_first=False, dropout=0, bidirectional=False)\n",
+    "    # 输入为input, (h_0, c_0) 其中input形状为(seq_len, batch, input_size)；h_0, c_0形状均为(num_layers * num_directions, batch, hidden_size)\n",
+    "    # 输出为output, (h_n, c_n) 其中output形状为(seq_len, batch, num_directions * hidden_size)；h_n, c_n形状同上\n",
+    "rnn = nn.LSTM(10, 20, 2)\n",
+    "input = torch.randn(5, 3, 10)\n",
+    "h0 = torch.randn(2, 3, 20)\n",
+    "c0 = torch.randn(2, 3, 20)\n",
+    "output, (hn, cn) = rnn(input, (h0, c0))\n",
+    "print(output.shape, hn.shape, cn.shape)"
+   ]
+  },
+  {
+   "source": [
+    "### 其他"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torch.nn.BatchNorm2d(num_features） 默认是有可学习的参数，若affine=False则无"
    ]
   },
   {
