--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -1469,11 +1469,29 @@
    ]
   },
   {
+   "source": [
+    "### pandas"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# pandas.read_excel(path, 'sheet1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.head() # 默认返回前5行数据"
+   ]
   }
  ]
 }
