--- a/leetcodes/array_matrix.ipynb
+++ b/leetcodes/array_matrix.ipynb
@@ -28,7 +28,8 @@
     "    获取行列长度(引入额外的空间):\n",
     "        867(矩阵转置)\n",
     "        566(矩阵重塑)\n",
-    "        54(螺旋矩阵)\n",
+    "        54/59(螺旋矩阵)\n",
+    "        行列递增矩阵查找数字\n",
     "        深度优先搜索/递归: 463\n",
     "        生成树(递归): 427\n",
     "    利用zip: 944 | 14\n",
@@ -112,6 +113,75 @@
     "                order.append(matrix[row][left])\n",
     "        left, right, top, bottom = left + 1, right - 1, top + 1, bottom - 1\n",
     "    return order"
+   ]
+  },
+  {
+   "source": [
+    "### 59. 螺旋矩阵 II"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generateMatrix(self, n: int) -> List[List[int]]:\n",
+    "    rows, columns = n, n\n",
+    "    matrix = [[0]*n for _ in range(n)]\n",
+    "\n",
+    "    left, right, top, bottom = 0, columns - 1, 0, rows - 1\n",
+    "    i = 1\n",
+    "    while left <= right and top <= bottom:\n",
+    "        for column in range(left, right + 1):\n",
+    "            matrix[top][column] = i\n",
+    "            i += 1\n",
+    "        for row in range(top + 1, bottom + 1):\n",
+    "            matrix[row][right]=i\n",
+    "            i += 1\n",
+    "        if left < right and top < bottom:\n",
+    "            for column in range(right - 1, left, -1):\n",
+    "                matrix[bottom][column] = i\n",
+    "                i += 1\n",
+    "            for row in range(bottom, top, -1):\n",
+    "                matrix[row][left] = i\n",
+    "                i += 1\n",
+    "        left, right, top, bottom = left + 1, right - 1, top + 1, bottom - 1\n",
+    "    return matrix"
+   ]
+  },
+  {
+   "source": [
+    "### 行列递增矩阵查找数字"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 从二维数组的右上角开始查找。如果当前元素等于目标值，则返回 true。如果当前元素大于目标值，则移到左边一列。如果当前元素小于目标值，则移到下边一行\n",
+    "def findNumberIn2DArray(self, matrix: List[List[int]], target: int) -> bool:\n",
+    "    if matrix == None or len(matrix) == 0 or len(matrix[0]) == 0:\n",
+    "        return False\n",
+    "\n",
+    "    rows, columns = len(matrix), len(matrix[0])\n",
+    "    row = 0\n",
+    "    column = columns - 1\n",
+    "    while row < rows and column >= 0:\n",
+    "        num = matrix[row][column]\n",
+    "        if num == target:\n",
+    "            return True\n",
+    "        elif num > target:\n",
+    "            column -= 1\n",
+    "        else:\n",
+    "            row += 1\n",
+    "    return False"
    ]
   },
   {
