--- a/leetcodes/linktable.ipynb
+++ b/leetcodes/linktable.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "遍历+迭代/递归: 206(反转) | 21(合并) \n",
+    "遍历+迭代/递归: 206(反转) | 21(合并) | 剑指 Offer 06 从尾到头打印链表\n",
     "    迭代: 循环\n",
     "    递归: 边界条件\n",
     "    迭代遍历+双指针(查找): 160(两个链表) | 876/234/141/142(一个链表/快慢指针) | 剑指 Offer 22(一个链表/差距指针) | 19\n",
@@ -131,6 +131,28 @@
     "    else:\n",
     "        l2.next = mergeTwoLists(l1, l2.next)\n",
     "        return l2"
+   ]
+  },
+  {
+   "source": [
+    "### 剑指 Offer 06 从尾到头打印链表"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reversePrint(self, head: ListNode) -> List[int]:\n",
+    "        temp = []\n",
+    "        curr = head\n",
+    "        while curr:\n",
+    "            temp.append(curr.val)\n",
+    "            curr = curr.next\n",
+    "        return temp[::-1]"
    ]
   },
   {
