--- a/leetcodes/sortings.ipynb
+++ b/leetcodes/sortings.ipynb
@@ -32,7 +32,8 @@
     "- 放在内存的称为内排序，需要使用外存的称为外排序；以下涉及的均为内排序\n",
     "- 交换排序包括冒泡排序和快排序\n",
     "- 插入排序这里指直接插入排序\n",
-    "- 选择排序包括直接选择排序和堆排序"
+    "- 选择排序包括直接选择排序和堆排序\n",
+    "- topk"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -335,6 +336,154 @@
     "\n",
     "a = [5, -1, 9, 3, 7, 8, 3, -2, 9]\n",
     "merge_sort(a)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "source": [
+    "## TopK"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### 暴力解法"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[5, -1, 4, 2, 6, 8, 7, 6, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 时间复杂度为 O(NK)\n",
+    "def getTopk(a, k): # 让数组的前k个元素有序\n",
+    "    for i in range(k):\n",
+    "        made_swap = False\n",
+    "        for j in range(len(a)-i-1):\n",
+    "            if a[j] > a[j + 1]:\n",
+    "                a[j], a[j + 1] = a[j + 1], a[j]\n",
+    "                made_swap = True\n",
+    "        if not made_swap:\n",
+    "            break\n",
+    "\n",
+    "array = [5, 6, -1, 4, 2, 8, 10, 7, 6]\n",
+    "getTopk(array, 1)\n",
+    "print(array)\n"
+   ]
+  },
+  {
+   "source": [
+    "### 快排解法"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[32, 9, 9, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 时间复杂度平均是 O(KlogN)\n",
+    "def getTopk(nums, k):\n",
+    "    if len(nums)==0:\n",
+    "        return []\n",
+    "    left=[a for a in nums[1:] if a>nums[0]]\n",
+    "    right=[a for a in nums[1:] if a<=nums[0]]\n",
+    "    if len(left)==k:\n",
+    "        return left\n",
+    "    elif len(left)==k-1:\n",
+    "        return left+[nums[0]]\n",
+    "    elif len(left)>k:\n",
+    "        return getTopk(left, k)\n",
+    "    else:\n",
+    "        return left+[nums[0]]+getTopk(right, k-1-len(left))\n",
+    "\n",
+    "items = [2,5,9,3,7,32,9,7,0,4]\n",
+    "print(getTopk(items, 4))\n",
+    "\n"
+   ]
+  },
+  {
+   "source": [
+    "### 堆排解法"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[8, 7, 3, 4, 2, 1, 9, 10, 14, 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 时间复杂度平均是 O(KlogN)\n",
+    "def getTopk(a, k):\n",
+    "    def left(i):\n",
+    "        return 2*i+1\n",
+    "\n",
+    "    def right(i):\n",
+    "        return 2*i+2\n",
+    "\n",
+    "    # construct a sub-tree whose root is node i\n",
+    "    def _max_heapify(a, length, i):\n",
+    "        l = left(i)\n",
+    "        r = right(i)\n",
+    "        largest = 0\n",
+    "    \n",
+    "        if l <= length-1 and a[i] < a[l]: \n",
+    "            largest = l \n",
+    "        else:\n",
+    "            largest = i\n",
+    "    \n",
+    "        if r <= length-1 and a[largest] < a[r]: \n",
+    "            largest = r \n",
+    "    \n",
+    "        if largest != i: \n",
+    "            a[i], a[largest] = a[largest], a[i]  \n",
+    "            _max_heapify(a, length, largest) \n",
+    "\n",
+    "    def _build_max_heap(a, length):\n",
+    "        for i in range(length//2-1, -1, -1):  # 索引从0开始\n",
+    "            _max_heapify(a, length , i)\n",
+    "\n",
+    "    length = len(a)\n",
+    "    _build_max_heap(a, length) # 此时根有最大值\n",
+    "\n",
+    "    for i in range(length-1, length-k-1, -1): # 一个个交换元素 此时A[n]存储有准确的值\n",
+    "        a[0], a[i] = a[i], a[0]\n",
+    "        _max_heapify(a, i, 0)\n",
+    "\n",
+    "a = [16,14,10,8,7,9,3,2,4,1]\n",
+    "getTopk(a, 4)\n",
     "print(a)"
    ]
   },
