--- a/leetcodes/array_basic.ipynb
+++ b/leetcodes/array_basic.ipynb
@@ -28,18 +28,21 @@
     "    .sort(key)或sorted(): 905 | 937 | 179\n",
     "2、遍历\n",
     "    哈希表: 1\n",
-    "    栈: 496(找右边第 1 个大于比自己大的数)\n",
+    "    栈: 496(找右边第 1 个大于比自己大的数)(栈尾元素)\n",
     "    队列: 239(单调队列)\n",
     "    双指针: \n",
     "        两边指针: 15 | 977\n",
     "        两个输入: 350/88(整数数组) | 415(字符串)\n",
     "        排序(涉及索引): 922 | 283 | 942\n",
-    "3、动态规划(最值/递推公式): 动态数组(索引和元素值/动态转移公式): 122 | 1696(使用队列存储历史记录进而实现动态转移) | 1691(元素值叠加: 动态数组长度加1) | 509(递推公式)\n",
+    "3、动态规划(最值/递推公式): 动态数组(索引和元素值/动态转移公式): 122/青蛙跳跃 | 1696(使用队列存储历史记录进而实现动态转移) | 1691(元素值叠加: 动态数组长度加1) | 509(递推公式)\n",
     "    最值: 设置数组，值与目标值有关，但索引不是动态的: 1674(索引为和/遍历动态索引/差分数组做区间更新)\n",
     "    最值: 堆(最小值): 1675\n",
     "    动态函数+递归+字典: 788\n",
     "    博弈: 1690\n",
     "4、二分查找(查找部分有序数组中的某个值)(确定中间索引+while): 852 | 33\n",
+    "\n",
+    "优化：\n",
+    "    剑指 Offer 39: 数组中出现次数超过一半的数字\n",
     "'''"
    ]
   },
@@ -469,6 +472,35 @@
   },
   {
    "source": [
+    "### 青蛙跳跃"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 输入参数：一个非负整数数组，青蛙位于数组的第一个位置，数组中的每个元素代表你在该位置可以跳跃的最大长度。输出：能否跳到\n",
+    "# 例如：输入为[2,3,1,1,4]，输出为true，因为可以先跳1步，从下标0到1，然后再从下标1跳3步达到最后一个下标\n",
+    "# 例如：输入为[3,2,1,0,4]，输出为false，因为无论怎样总会到达下标为3的位置，但该下标最大跳跃长度是0，所以永远不可能达到最后一个下标\n",
+    "# 定义一个数组dp，dp[i]表示当前可以覆盖的最大范围。当前位置能否可达很简单，判断dp[i-1]是否小于i，如果小于就不可达。如果可达，更新dp[i] = Max(dp[i-1], i+nums[i])\n",
+    "def canJump(nums):\n",
+    "    dp = [0]*len(nums)\n",
+    "    dp[0]=nums[0]\n",
+    "    for i in range(1, len(nums)-1):\n",
+    "        if dp[i-1]<i:\n",
+    "            return False\n",
+    "        dp[i] = max(dp[i-1],i+nums[i])\n",
+    "    if dp[-1]<len(nums)-1:\n",
+    "        return False\n",
+    "    return True\n"
+   ]
+  },
+  {
+   "source": [
     "### 1696: 跳跃游戏 VI"
    ],
    "cell_type": "markdown",
@@ -749,6 +781,42 @@
     "            else:\n",
     "                r = mid - 1\n",
     "    return -1"
+   ]
+  },
+  {
+   "source": [
+    "### 剑指 Offer 39: 数组中出现次数超过一半的数字"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 哈希表统计法: 遍历数组 nums ，用 HashMap 统计各数字的数量，即可找出 众数 。此方法时间和空间复杂度均为 O(N)\n",
+    "# 数组排序法：将数组 nums 排序，数组中点的元素 一定为众数\n",
+    "# 摩尔投票法：核心理念为票数正负抵消 。此方法时间和空间复杂度分别为 O(N) 和 O(1)，为最佳\n",
+    "    # 若记 众数 的票数为 +1 ，非众数 的票数为 -1 ，则一定有所有数字的 票数和 > 0\n",
+    "    # 若数组的前 a 个数字的 票数和 = 0 ，则 数组剩余 (n-a) 个数字的 票数和一定仍 >0 ，即后 (n-a) 个数字的 众数仍为 x\n",
+    "def majorityElement(self, nums: List[int]) -> int:\n",
+    "    votes = 0\n",
+    "    for num in nums:\n",
+    "        if votes == 0: x = num\n",
+    "        votes += 1 if num == x else -1\n",
+    "    return x\n",
+    "# 上述实现不用考虑数组不存在众数的情况。若考虑，需要加入一个 “验证环节” ，遍历数组 nums 统计 x 的数量\n",
+    "def majorityElement(self, nums: List[int]) -> int:\n",
+    "    votes, count = 0, 0\n",
+    "    for num in nums:\n",
+    "        if votes == 0: x = num\n",
+    "        votes += 1 if num == x else -1\n",
+    "    # 验证 x 是否为众数\n",
+    "    for num in nums:\n",
+    "        if num == x: count += 1\n",
+    "    return x if count > len(nums) // 2 else 0 # 当无众数时返回 0"
    ]
   }
  ]
