--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -888,7 +888,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    ".isalpha() | .isalnum() | .islower() | .isupper() | .lower() | .upper() | .capitalize() | .istitle() | .isspace()\n",
+    ".isalpha() | .isdigit() | .isalnum() | .islower() | .isupper() | .lower() | .upper() | .capitalize() | .istitle() | .isspace()\n",
     ".split() | .replace() | .index() | .reverse()\n",
     "    split(str, num): str为分隔符，默认为所有的空字符，包括空格、换行(\\n)、制表符(\\t)等；num为分割次数，默认为 -1，即分隔所有\n",
     "ord() | chr()\n",
@@ -1421,14 +1421,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1, 3, 4, 0, 2]\n[2, 4, 1, 3, 5]\n"
+      "[4, 1, 0, 2, 3]\n[3, 5, 1, 2, 4]\n"
      ]
     }
    ],
@@ -1466,6 +1466,25 @@
     "print(np.where(aa > 5,1,-1))\n",
     "print(np.where(aa > 5)) # 返回索引\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[3 3 8 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 值裁剪\n",
+    "a=np.array([1,3,79,3])\n",
+    "print(np.clip(a,3,8))"
    ]
   },
   {
