--- a/leetcodes/tree.ipynb
+++ b/leetcodes/tree.ipynb
@@ -24,21 +24,23 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "1、递归: 700 | 617\n",
+    "1、递归: 700(值搜索) | 617(树的合并) | 101(树的对称) | 100(树的相同) | 572(树和子树)\n",
     "    三种遍历:\n",
     "        前序遍历: 中左右\n",
     "        中序遍历: 左中右\n",
     "        后序遍历: 左右中\n",
-    "    深度优先搜索dfs: 965 | 538 | 872\n",
+    "    深度优先搜索dfs: 965(单值) | 538(累加树) | 543(直径) | 872(叶子相似)\n",
     "2、迭代: \n",
     "    引入while循环: 700\n",
     "    结合队列: \n",
     "        广度优先搜索bfs: 617\n",
+    "        层次遍历/102 | 之字遍历/103\n",
     "        层相关: 637 | 429 | 590\n",
     "3、二叉搜索树\n",
     "    每个结点大于左子树上任意一个节点的值，小于右子树上任意一个节点的值\n",
     "4、新建一棵树\n",
     "    根据列表中的节点值，创建等价的只含有右节点的二叉搜索树，其过程等价于根据节点值创建一个链表: 897\n",
+    "    从中序与后序遍历序列构造二叉树: 106\n",
     "'''"
    ]
   },
@@ -65,6 +67,17 @@
     "        pre_order(root.left)\n",
     "        #递归遍历右节点\n",
     "        pre_order(root.right)\n",
+    "def pre_order(root):\n",
+    "    if root:\n",
+    "        stack = []\n",
+    "        stack.append(root)\n",
+    "        while stack:\n",
+    "            temp = stack.pop()\n",
+    "            result.append(temp.val)\n",
+    "            if temp.right:\n",
+    "                stack.append(temp.right)\n",
+    "            if temp.left:\n",
+    "                stack.append(temp.left)\n",
     "\n",
     "# 二叉树的中序遍历\n",
     "def in_order(root):\n",
@@ -76,6 +89,17 @@
     "        result.append(root.val)\n",
     "        #递归遍历右节点\n",
     "        in_order(root.right)\n",
+    "def in_order(root):\n",
+    "    if root:\n",
+    "        stack = []\n",
+    "        while stack or root:\n",
+    "            if root:\n",
+    "                stack.append(root)\n",
+    "                root = root.left\n",
+    "            else:\n",
+    "                root = stack.pop()\n",
+    "                result.append(root.val)\n",
+    "                root = root.right\n",
     "\n",
     "# 二叉树的后序遍历\n",
     "def post_order(root):\n",
@@ -86,7 +110,21 @@
     "        #递归遍历右节点\n",
     "        post_order(root.right)\n",
     "        #节点值入队列\n",
-    "        result.append(root.val)"
+    "        result.append(root.val)\n",
+    "def post_order(root):\n",
+    "    if root:\n",
+    "        stack = []\n",
+    "        stack1 = []\n",
+    "        stack.append(root)\n",
+    "        while stack:\n",
+    "            temp = stack.pop()\n",
+    "            stack1.append(temp)\n",
+    "            if temp.left:\n",
+    "                stack.append(temp.left)\n",
+    "            if temp.right:\n",
+    "                stack.append(temp.right)\n",
+    "        while stack1:\n",
+    "            result.append(stack1.pop().val)"
    ]
   },
   {
@@ -183,6 +221,81 @@
   },
   {
    "source": [
+    "### 101: 对称二叉树"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isSymmetric(self, root: TreeNode) -> bool:\n",
+    "    def check(p, q):\n",
+    "        if not p and not q:\n",
+    "            return True\n",
+    "        if not p or not q:\n",
+    "            return False\n",
+    "        \n",
+    "        return p.val == q.val and check(p.left, q.right) and check(p.right, q.left)\n",
+    "\n",
+    "    return check(root, root)"
+   ]
+  },
+  {
+   "source": [
+    "### 100: 相同的树"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isSameTree(self, p: TreeNode, q: TreeNode) -> bool:\n",
+    "    if not p and not q:\n",
+    "        return True\n",
+    "    if not p or not q:\n",
+    "        return False\n",
+    "    \n",
+    "    return p.val == q.val and self.isSameTree(p.left, q.left) and self.isSameTree(p.right, q.right)"
+   ]
+  },
+  {
+   "source": [
+    "### 572: 另一个树的子树"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isSubtree(self, root: TreeNode, subRoot: TreeNode) -> bool:\n",
+    "    if not root and not subRoot:\n",
+    "        return True\n",
+    "    if not root or not subRoot:\n",
+    "        return False\n",
+    "    return self.isSameTree(root, subRoot) or self.isSubtree(root.left, subRoot) or self.isSubtree(root.right, subRoot)\n",
+    "    \n",
+    "def isSameTree(self, s, t):\n",
+    "    if not s and not t:\n",
+    "        return True\n",
+    "    if not s or not t:\n",
+    "        return False\n",
+    "    return s.val == t.val and self.isSameTree(s.left, t.left) and self.isSameTree(s.right, t.right)"
+   ]
+  },
+  {
+   "source": [
     "### 965: 单值二叉树"
    ],
    "cell_type": "markdown",
@@ -236,6 +349,34 @@
   },
   {
    "source": [
+    "### 543: 二叉树的直径"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 求直径（即求路径长度的最大值）等效于求路径经过节点数的最大值减一\n",
+    "def diameterOfBinaryTree(self, root: TreeNode) -> int:\n",
+    "    def depth(node):\n",
+    "        nonlocal ans\n",
+    "        if not node:\n",
+    "            return 0\n",
+    "        L = depth(node.left)\n",
+    "        R = depth(node.right)\n",
+    "        ans = max(ans, L + R + 1)\n",
+    "        return max(L, R) + 1\n",
+    "    ans = 1\n",
+    "    depth(root)\n",
+    "    return ans - 1"
+   ]
+  },
+  {
+   "source": [
     "### 872: 叶子相似的树"
    ],
    "cell_type": "markdown",
@@ -256,6 +397,81 @@
     "            yield from dfs(node.right)\n",
     "\n",
     "    return list(dfs(root1)) == list(dfs(root2))"
+   ]
+  },
+  {
+   "source": [
+    "### 102: 二叉树的层序遍历"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def levelOrder(self, root: TreeNode) -> List[List[int]]:\n",
+    "    if not root:\n",
+    "        return []\n",
+    "    result = []\n",
+    "    queue = collections.deque([root])\n",
+    "    while queue:\n",
+    "        size = len(queue)\n",
+    "        result.append([])\n",
+    "        for _ in range(size):\n",
+    "            node = queue.popleft()\n",
+    "            result[-1].append(node.val)\n",
+    "            left, right = node.left, node.right\n",
+    "            if left:\n",
+    "                queue.append(left)\n",
+    "            if right:\n",
+    "                queue.append(right)\n",
+    "    return result"
+   ]
+  },
+  {
+   "source": [
+    "### 103: 二叉树的锯齿形层序遍历"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def zigzagLevelOrder(self, root: TreeNode) -> List[List[int]]:\n",
+    "    if not root:\n",
+    "        return []\n",
+    "    result = []\n",
+    "    cur = [root]\n",
+    "    d = 1\n",
+    "    while cur:\n",
+    "        tmp = cur.copy()\n",
+    "        cur = []\n",
+    "        nums = []\n",
+    "        n = len(tmp)\n",
+    "        for i in range(n-1, -1, -1):\n",
+    "            node = tmp[i]\n",
+    "            nums.append(node.val)\n",
+    "            if d == 1:\n",
+    "                if node.left:\n",
+    "                    cur.append(node.left)\n",
+    "                if node.right:\n",
+    "                    cur.append(node.right)\n",
+    "            else:\n",
+    "                if node.right:\n",
+    "                    cur.append(node.right)\n",
+    "                if node.left:\n",
+    "                    cur.append(node.left)\n",
+    "        d = -d\n",
+    "        result.append(nums.copy())\n",
+    "\n",
+    "    return result"
    ]
   },
   {
@@ -396,6 +612,43 @@
     "    in_order(root)\n",
     "    \n",
     "    return dummyNode.right"
+   ]
+  },
+  {
+   "source": [
+    "### 106: 从中序与后序遍历序列构造二叉树"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def buildTree(self, inorder: List[int], postorder: List[int]) -> TreeNode:\n",
+    "    def helper(in_left, in_right):\n",
+    "        # 如果这里没有节点构造二叉树了，就结束\n",
+    "        if in_left > in_right:\n",
+    "            return None\n",
+    "        \n",
+    "        # 选择 post_idx 位置的元素作为当前子树根节点\n",
+    "        val = postorder.pop()\n",
+    "        root = TreeNode(val)\n",
+    "\n",
+    "        # 根据 root 所在位置分成左右两棵子树\n",
+    "        index = idx_map[val]\n",
+    "\n",
+    "        # 构造右子树\n",
+    "        root.right = helper(index + 1, in_right)\n",
+    "        # 构造左子树\n",
+    "        root.left = helper(in_left, index - 1)\n",
+    "        return root\n",
+    "    \n",
+    "    # 建立（元素，下标）键值对的哈希表\n",
+    "    idx_map = {val:idx for idx, val in enumerate(inorder)} \n",
+    "    return helper(0, len(inorder) - 1)"
    ]
   }
  ]
