--- a/leetcodes/array_matrix.ipynb
+++ b/leetcodes/array_matrix.ipynb
@@ -29,7 +29,7 @@
     "        867(矩阵转置)\n",
     "        566(矩阵重塑)\n",
     "        54/59(螺旋矩阵)\n",
-    "        行列递增矩阵查找数字\n",
+    "        74 行列递增矩阵查找数字\n",
     "        深度优先搜索/递归: 463\n",
     "        生成树(递归): 427\n",
     "    利用zip: 944 | 14\n",
@@ -154,7 +154,7 @@
   },
   {
    "source": [
-    "### 行列递增矩阵查找数字"
+    "### 74: 行列递增矩阵查找数字"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -181,7 +181,36 @@
     "            column -= 1\n",
     "        else:\n",
     "            row += 1\n",
-    "    return False"
+    "    return False\n",
+    "\n",
+    "# 二分查找\n",
+    "def searchMatrix(self, matrix: List[List[int]], target: int) -> bool:\n",
+    "    if len(matrix) < 1:return False\n",
+    "    def getRow(matrix, target):\n",
+    "        top = 0\n",
+    "        bottom = len(matrix) - 1\n",
+    "        col = len(matrix[0]) - 1\n",
+    "        while top < bottom:\n",
+    "            mid = (top+bottom)//2\n",
+    "            if matrix[mid][col] < target:\n",
+    "                top = mid + 1\n",
+    "            else:\n",
+    "                bottom = mid\n",
+    "        return top\n",
+    "    def find(data, target):\n",
+    "        l = 0\n",
+    "        r = len(data) - 1\n",
+    "        while l <= r:\n",
+    "            mid = (l+r)//2\n",
+    "            if data[mid] == target:\n",
+    "                return True\n",
+    "            elif data[mid] < target:\n",
+    "                l = mid + 1\n",
+    "            else:\n",
+    "                r = mid - 1\n",
+    "        return False\n",
+    "    row = getRow(matrix, target)\n",
+    "    return find(matrix[row], target)"
    ]
   },
   {
