--- a/leetcodes/binary.ipynb
+++ b/leetcodes/binary.ipynb
@@ -35,7 +35,7 @@
     "'''\n",
     "1、异或 ^: \n",
     "    在二进制位上的应用: 461\n",
-    "    任何数和0做异或运算，结果仍然是原来的数/任何数和其自身做异或运算，结果是0: 136 | 137\n",
+    "    任何数和0做异或运算，结果仍然是原来的数/任何数和其自身做异或运算，结果是0: 136(出现一次数字，其余两次) | 137(出现一次数字/其余三次) | 268(丢失数字)\n",
     "2、获得二进制:\n",
     "    bin(): \n",
     "        461: count()\n",
@@ -115,6 +115,23 @@
     "        twos = (twos ^ n) & ~ones\n",
     "        \n",
     "    return ones"
+   ]
+  },
+  {
+   "source": [
+    "### 268: 丢失的数字"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def missingNumber(self, nums: List[int]) -> int:\n",
+    "    return reduce(lambda x, y: x ^ y, nums+list(range(len(nums)+1)))"
    ]
   },
   {
