--- a/leetcodes/tree.ipynb
+++ b/leetcodes/tree.ipynb
@@ -10,9 +10,18 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.6.13"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3613jvsc74a57bd072506cc1e4b0dce5eb876f653d1c5faf29777724f7cbfb23a9a7a2a764425624",
+   "display_name": "Python 3.6.13 64-bit ('lnf': conda)"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "72506cc1e4b0dce5eb876f653d1c5faf29777724f7cbfb23a9a7a2a764425624"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -29,7 +38,7 @@
     "        前序遍历: 中左右\n",
     "        中序遍历: 左中右\n",
     "        后序遍历: 左右中\n",
-    "    深度优先搜索dfs: 965(单值) | 538(累加树) | 543(直径) | 872(叶子相似)\n",
+    "    深度优先搜索dfs: 965(单值) | 538(累加树) | 236(最近公共祖先) | 543(直径) | 872(叶子相似)\n",
     "2、迭代: \n",
     "    引入while循环: 700\n",
     "    结合队列: \n",
@@ -345,6 +354,36 @@
     "    total = 0\n",
     "    dfs(root)\n",
     "    return root"
+   ]
+  },
+  {
+   "source": [
+    "### 236: 二叉树的最近公共祖先"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lowestCommonAncestor(self, root: 'TreeNode', p: 'TreeNode', q: 'TreeNode') -> 'TreeNode':\n",
+    "    def dfs(root, p, q):\n",
+    "        nonlocal ans\n",
+    "        if not root:\n",
+    "            return False\n",
+    "        lson = dfs(root.left, p, q)\n",
+    "        rson = dfs(root.right, p, q)\n",
+    "        if (lson and rson) or ((root.val==p.val or root.val==q.val) and (lson or rson)):\n",
+    "            ans = root\n",
+    "        return lson or rson or (root.val==p.val or root.val==q.val)\n",
+    "\n",
+    "    \n",
+    "    ans = None\n",
+    "    dfs(root, p, q)\n",
+    "    return ans"
    ]
   },
   {
