--- a/leetcodes/array_basic.ipynb
+++ b/leetcodes/array_basic.ipynb
@@ -39,7 +39,7 @@
     "    最值: 堆(最小值): 1675\n",
     "    动态函数+递归+字典: 788\n",
     "    博弈: 1690\n",
-    "4、二分查找(查找部分有序数组中的某个值)(确定中间索引+while): 852 | 33\n",
+    "4、二分查找(查找部分有序数组中的某个值)(确定中间索引+while): 852 | 33(旋转数据查找) | 153(旋转数组最小值) | 154(旋转数组最小值/有重复) | 69(平方根)\n",
     "\n",
     "优化：\n",
     "    剑指 Offer 39: 数组中出现次数超过一半的数字\n",
@@ -781,6 +781,85 @@
     "            else:\n",
     "                r = mid - 1\n",
     "    return -1"
+   ]
+  },
+  {
+   "source": [
+    "### 153: 寻找旋转排序数组中的最小值"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findMin(self, nums: List[int]) -> int:\n",
+    "    left = 0\n",
+    "    right = len(nums) - 1\n",
+    "    while left < right:\n",
+    "        mid = (left + right) // 2\n",
+    "        if nums[mid] > nums[right]:         \n",
+    "            left = mid + 1\n",
+    "        else:                               \n",
+    "            right = mid\n",
+    "    return nums[left]"
+   ]
+  },
+  {
+   "source": [
+    "### 154: 寻找旋转排序数组中的最小值 II"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 多了nums[mid] 等于 nums[right] 时的额外处理;因为 mid 和 right 相等时，最小值既可能在左边，又可能在右边，所以此时自然二分思想作废，咱们就砍掉一个右边界\n",
+    "def findMin(self, nums: List[int]) -> int:\n",
+    "    left = 0\n",
+    "    right = len(nums) - 1\n",
+    "    while left < right:\n",
+    "        mid = (left + right) // 2\n",
+    "        if nums[mid] > nums[right]:         \n",
+    "            left = mid + 1\n",
+    "        elif nums[mid] < nums[right]:                               \n",
+    "            right = mid\n",
+    "        else:\n",
+    "            right -= 1\n",
+    "    return nums[left]"
+   ]
+  },
+  {
+   "source": [
+    "### 69: x 的平方根"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mySqrt(self, x: int) -> int:\n",
+    "    if x == 0:return 0\n",
+    "    l = 1\n",
+    "    r = x//2\n",
+    "    while l < r:\n",
+    "        mid = (l+r)//2+1 # 需要加1来略微增大搜索空间\n",
+    "        if mid*mid > x:\n",
+    "            r = mid - 1\n",
+    "        else:\n",
+    "            l = mid\n",
+    "    return l"
    ]
   },
   {
