--- a/leetcodes/array_basic.ipynb
+++ b/leetcodes/array_basic.ipynb
@@ -27,19 +27,19 @@
     "1、排序\n",
     "    .sort(key)或sorted(): 905 | 937 | 179\n",
     "2、遍历\n",
-    "    哈希表: 1\n",
+    "    哈希表: 1 | 41(优化空间复杂度)\n",
     "    栈: 496(找右边第 1 个大于比自己大的数)(栈尾元素)\n",
     "    队列: 239(单调队列)\n",
     "    双指针: \n",
-    "        两边指针: 15 | 977\n",
+    "        两边指针: 15(三数之和) | 977(有序数组的平方) | 189(旋转数组)\n",
     "        两个输入: 350/88(整数数组) | 415(字符串)\n",
-    "        排序(涉及索引): 922 | 283 | 942\n",
-    "3、动态规划(最值/递推公式): 动态数组(索引和元素值/动态转移公式): 122/青蛙跳跃 | 1696(使用队列存储历史记录进而实现动态转移) | 1691(元素值叠加: 动态数组长度加1) | 509(递推公式)\n",
+    "        排序(涉及索引): 922(奇偶排序) | 283(移动零) | 942(增减字符串匹配) | 31(下一个排列)\n",
+    "3、动态规划(最值/递推公式): 动态数组(索引和元素值/动态转移公式): 122/青蛙跳跃 | 1696(使用队列存储历史记录进而实现动态转移) | 1691(元素值叠加: 动态数组长度加1) | 509/70(递推公式)\n",
     "    最值: 设置数组，值与目标值有关，但索引不是动态的: 1674(索引为和/遍历动态索引/差分数组做区间更新)\n",
     "    最值: 堆(最小值): 1675\n",
     "    动态函数+递归+字典: 788\n",
     "    博弈: 1690\n",
-    "4、二分查找(查找部分有序数组中的某个值)(确定中间索引+while): 852 | 33(旋转数据查找) | 153(旋转数组最小值) | 154(旋转数组最小值/有重复) | 69(平方根)\n",
+    "4、二分查找(查找部分有序数组中的某个值)(确定中间索引+while): 852(山脉数组) | 33(旋转数组查找) | 153(旋转数组最小值) | 154(旋转数组最小值/有重复) | 69(平方根) | 34(排序数组查找)\n",
     "\n",
     "优化：\n",
     "    剑指 Offer 39: 数组中出现次数超过一半的数字\n",
@@ -124,6 +124,52 @@
     "        hashtable[v] = i\n",
     "\n",
     "    return [] "
+   ]
+  },
+  {
+   "source": [
+    "### 41: 缺失的第一个正数"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 对于一个长度为 N 的数组，其中没有出现的最小正整数只能在 [1, N+1] 中\n",
+    "# 将数组设计成哈希表的思路: 打标记/置换\n",
+    "# 打标记/变成负数\n",
+    "def firstMissingPositive(self, nums: List[int]) -> int:\n",
+    "    n = len(nums)\n",
+    "    for i in range(n):\n",
+    "        if nums[i] <= 0:\n",
+    "            nums[i] = n + 1\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        num = abs(nums[i])\n",
+    "        if num <= n:\n",
+    "            nums[num - 1] = -abs(nums[num - 1])\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        if nums[i] > 0:\n",
+    "            return i + 1\n",
+    "    \n",
+    "    return n + 1\n",
+    "\n",
+    "# 置换\n",
+    "# 如果数组中包含 x \\in [1, N]，那么置换后，数组的第 x - 1 个元素为 x\n",
+    "def firstMissingPositive(self, nums: List[int]) -> int:\n",
+    "    n = len(nums)\n",
+    "    for i in range(n):\n",
+    "        while 1 <= nums[i] <= n and nums[nums[i] - 1] != nums[i]: # 避免死循环\n",
+    "            nums[nums[i] - 1], nums[i] = nums[i], nums[nums[i] - 1]\n",
+    "    for i in range(n):\n",
+    "        if nums[i] != i + 1:\n",
+    "            return i + 1\n",
+    "    return n + 1"
    ]
   },
   {
@@ -264,6 +310,35 @@
     "        pos -= 1\n",
     "    \n",
     "    return ans"
+   ]
+  },
+  {
+   "source": [
+    "### 189: 旋转数组"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rotate(self, nums: List[int], k: int) -> None:\n",
+    "    \"\"\"\n",
+    "    Do not return anything, modify nums in-place instead.\n",
+    "    \"\"\"\n",
+    "    def reverse(nums, start, end):\n",
+    "        while start<end:\n",
+    "            nums[start], nums[end] = nums[end], nums[start]\n",
+    "            start += 1\n",
+    "            end -= 1\n",
+    "\n",
+    "    k %= len(nums)\n",
+    "    reverse(nums, 0, len(nums)-1)\n",
+    "    reverse(nums, 0, k-1)\n",
+    "    reverse(nums, k, len(nums)-1)"
    ]
   },
   {
@@ -447,6 +522,42 @@
   },
   {
    "source": [
+    "### 31: 下一个排列"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 首先从后向前查找第一个顺序对(i,i+1)，其中a[i]是较小数\n",
+    "# 如果找到了顺序对，那么在区间[i+1,n)中从后向前查找第一个元素 j 满足a[i]<a[j]，这样较大数为a[j]\n",
+    "# 交换a[i]和a[j]，然后使用双指针反转区间[i+1,n)使其变为升序\n",
+    "def nextPermutation(self, nums: List[int]) -> None:\n",
+    "    \"\"\"\n",
+    "    Do not return anything, modify nums in-place instead.\n",
+    "    \"\"\"\n",
+    "    i = len(nums) - 2\n",
+    "    while i >= 0 and nums[i] >= nums[i + 1]:\n",
+    "        i -= 1\n",
+    "    if i >= 0:\n",
+    "        j = len(nums) - 1\n",
+    "        while j >= 0 and nums[i] >= nums[j]:\n",
+    "            j -= 1\n",
+    "        nums[i], nums[j] = nums[j], nums[i]\n",
+    "    \n",
+    "    left, right = i + 1, len(nums) - 1\n",
+    "    while left < right:\n",
+    "        nums[left], nums[right] = nums[right], nums[left]\n",
+    "        left += 1\n",
+    "        right -= 1"
+   ]
+  },
+  {
+   "source": [
     "### 122: 买卖股票的最佳时机 II"
    ],
    "cell_type": "markdown",
@@ -572,6 +683,32 @@
     "    dp[0]=0\n",
     "    dp[1]=1\n",
     "    for i in range(2, n+1):\n",
+    "        dp[i]=dp[i-1]+dp[i-2]\n",
+    "    return dp[-1]"
+   ]
+  },
+  {
+   "source": [
+    "### 70: 爬楼梯"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 用 f(x) 表示爬到第 x 级台阶的方案数\n",
+    "# 考虑最后一步可能跨了一级台阶，也可能跨了两级台阶\n",
+    "def climbStairs(self, n: int) -> int:\n",
+    "    if n<=2:\n",
+    "        return n\n",
+    "    dp = [0]*(n+1)\n",
+    "    dp[1]=1\n",
+    "    dp[2]=2\n",
+    "    for i in range(3, n+1):\n",
     "        dp[i]=dp[i-1]+dp[i-2]\n",
     "    return dp[-1]"
    ]
@@ -743,8 +880,32 @@
     "def peakIndexInMountainArray(A):\n",
     "    lo, hi = 0, len(A) - 1\n",
     "    while lo < hi:\n",
-    "        mi = (lo + hi) / 2 \n",
+    "        mi = (lo + hi) // 2 \n",
     "        if A[mi] < A[mi + 1]:\n",
+    "            lo = mi + 1\n",
+    "        else:\n",
+    "            hi = mi\n",
+    "    return lo"
+   ]
+  },
+  {
+   "source": [
+    "### 162: 寻找峰值"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findPeakElement(self, nums: List[int]) -> int:\n",
+    "    lo, hi = 0, len(nums) - 1\n",
+    "    while lo < hi:\n",
+    "        mi = (lo + hi) // 2 \n",
+    "        if nums[mi] < nums[mi + 1]:\n",
     "            lo = mi + 1\n",
     "        else:\n",
     "            hi = mi\n",
@@ -860,6 +1021,42 @@
     "        else:\n",
     "            l = mid\n",
     "    return l"
+   ]
+  },
+  {
+   "source": [
+    "### 34: 在排序数组中查找元素的第一个和最后一个位置"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 考虑 target 开始和结束位置，其实我们要找的就是数组中「第一个等于 target 的位置」（记为leftIdx）和「第一个大于 target 的位置减一」（记为rightIdx）\n",
+    "def searchRange(self, nums: List[int], target: int) -> List[int]:\n",
+    "    def binarySearch(nums, target, lower):\n",
+    "        l = 0\n",
+    "        r = len(nums) - 1\n",
+    "        ans = len(nums)\n",
+    "        while l <= r:\n",
+    "            mid = (l+r)//2\n",
+    "            if (nums[mid] > target) or (lower and nums[mid]>=target):\n",
+    "                r = mid - 1\n",
+    "                ans = mid\n",
+    "            else:\n",
+    "                l = mid + 1\n",
+    "\n",
+    "        return ans\n",
+    "    \n",
+    "    lindex = binarySearch(nums, target, True)\n",
+    "    rindex = binarySearch(nums, target, False)-1\n",
+    "    if lindex<=rindex and rindex<len(nums) and nums[lindex]==target and nums[rindex]==target:\n",
+    "        return [lindex, rindex]\n",
+    "    return [-1, -1]"
    ]
   },
   {
