--- a/leetcodes/array_matrix.ipynb
+++ b/leetcodes/array_matrix.ipynb
@@ -28,9 +28,12 @@
     "    获取行列长度(引入额外的空间):\n",
     "        867(矩阵转置)\n",
     "        566(矩阵重塑)\n",
+    "        48(图像旋转)\n",
+    "\n",
+    "        498(对角线遍历)\n",
     "        54/59(螺旋矩阵)\n",
-    "        74 行列递增矩阵查找数字\n",
-    "        深度优先搜索/递归: 463\n",
+    "        74(行列递增矩阵查找数字)(二分行+二分列) | 240(行列递增矩阵查找数字/有交叉)(迭代对角线/分别二分行与列)\n",
+    "        深度优先搜索/递归: 200(岛屿数量) | 463(岛屿周长)\n",
     "        生成树(递归): 427\n",
     "    利用zip: 944 | 14\n",
     "'''"
@@ -81,6 +84,77 @@
     "        ans[x // c][x % c] = nums[x // n][x % n]\n",
     "    \n",
     "    return ans"
+   ]
+  },
+  {
+   "source": [
+    "### 48: 旋转图像 "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rotate(self, matrix: List[List[int]]) -> None:\n",
+    "    \"\"\"\n",
+    "    Do not return anything, modify matrix in-place instead.\n",
+    "    \"\"\"\n",
+    "    n = len(matrix)\n",
+    "    # 水平翻转\n",
+    "    for i in range(n // 2):\n",
+    "        for j in range(n):\n",
+    "            matrix[i][j], matrix[n - i - 1][j] = matrix[n - i - 1][j], matrix[i][j]\n",
+    "    # 主对角线翻转\n",
+    "    for i in range(n):\n",
+    "        for j in range(i):\n",
+    "            matrix[i][j], matrix[j][i] = matrix[j][i], matrix[i][j]"
+   ]
+  },
+  {
+   "source": [
+    "### 498: 对角线遍历"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findDiagonalOrder(self, mat: List[List[int]]) -> List[int]:\n",
+    "    if not mat or not mat[0]:\n",
+    "        return []\n",
+    "\n",
+    "    N, M = len(mat), len(mat[0])\n",
+    "    row, column = 0, 0\n",
+    "    direction = 1\n",
+    "    result = []\n",
+    "\n",
+    "    while row < N and column < M:\n",
+    "        result.append(mat[row][column])\n",
+    "        new_row = row + (-1 if direction == 1 else 1)\n",
+    "        new_column = column + (1 if direction == 1 else -1)\n",
+    "\n",
+    "        if new_row < 0 or new_row == N or new_column < 0 or new_column == M:\n",
+    "            if direction:\n",
+    "                row += (column == M - 1)\n",
+    "                column += (column < M - 1)\n",
+    "            else:\n",
+    "                column += (row == N - 1)\n",
+    "                row += (row < N - 1)\n",
+    "\n",
+    "            direction = 1 - direction  \n",
+    "        else:\n",
+    "            row = new_row\n",
+    "            column = new_column\n",
+    "                    \n",
+    "    return result  "
    ]
   },
   {
@@ -215,6 +289,96 @@
   },
   {
    "source": [
+    "### 240: 搜索二维矩阵 II"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 迭代矩阵对角线\n",
+    "def searchMatrix(self, matrix: List[List[int]], target: int) -> bool:\n",
+    "    if not matrix:\n",
+    "        return False\n",
+    "\n",
+    "    def binary_search(matrix, target, start, vertical):\n",
+    "        lo = start\n",
+    "        hi = len(matrix)-1 if vertical else len(matrix[0])-1\n",
+    "\n",
+    "        while lo<=hi:\n",
+    "            mid = (lo + hi)//2\n",
+    "            if vertical: # searching a column\n",
+    "                if matrix[mid][start] < target:\n",
+    "                    lo = mid + 1\n",
+    "                elif matrix[mid][start] > target:\n",
+    "                    hi = mid - 1\n",
+    "                else:\n",
+    "                    return True\n",
+    "            else: # searching a row\n",
+    "                if matrix[start][mid] < target:\n",
+    "                    lo = mid + 1\n",
+    "                elif matrix[start][mid] > target:\n",
+    "                    hi = mid - 1\n",
+    "                else:\n",
+    "                    return True\n",
+    "        \n",
+    "        return False\n",
+    "\n",
+    "    # iterate over matrix diagonals starting in bottom left.\n",
+    "    for i in range(min(len(matrix), len(matrix[0]))):\n",
+    "        vertical_found = binary_search(matrix, target, i, True)\n",
+    "        horizontal_found = binary_search(matrix, target, i, False)\n",
+    "        if vertical_found or horizontal_found:\n",
+    "            return True\n",
+    "    \n",
+    "    return False"
+   ]
+  },
+  {
+   "source": [
+    "### 200: 岛屿数量"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numIslands(self, grid: List[List[str]]) -> int:\n",
+    "    dx = [0, 1, 0, -1]\n",
+    "    dy = [1, 0, -1, 0]\n",
+    "\n",
+    "    def dfs(x, y, grid, n, m):\n",
+    "        grid[x][y] = 0\n",
+    "        for i in range(4):\n",
+    "            tx = x + dx[i]\n",
+    "            ty = y + dy[i]\n",
+    "            if 0 <= tx < n and 0 <= ty < m and grid[tx][ty] == \"1\":\n",
+    "                dfs(tx, ty, grid, n, m)\n",
+    "\n",
+    "    n = len(grid)\n",
+    "    if n==0:\n",
+    "        return 0\n",
+    "    m = len(grid[0])\n",
+    "    num = 0\n",
+    "    for i in range(n):\n",
+    "        for j in range(m):\n",
+    "            if grid[i][j] == \"1\":\n",
+    "                num += 1\n",
+    "                dfs(i, j, grid, n, m)\n",
+    "\n",
+    "    return num"
+   ]
+  },
+  {
+   "source": [
     "### 463: 岛屿的周长"
    ],
    "cell_type": "markdown",
@@ -240,7 +404,7 @@
     "        res = 0\n",
     "        for i in range(4):\n",
     "            tx = x + dx[i]\n",
-    "            ty = y + dy[j]\n",
+    "            ty = y + dy[i]\n",
     "            res += dfs(tx, ty, grid, n, m)\n",
     "\n",
     "        return res\n",
