--- a/leetcodes/design.ipynb
+++ b/leetcodes/design.ipynb
@@ -210,6 +210,64 @@
     "        self.removeNode(node)\n",
     "        return node"
    ]
+  },
+  {
+   "source": [
+    "### 232: 用栈实现队列"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 双栈\n",
+    "# 栈的 后进先出 特性相当于“逆转”了队列 先进先出 的效果，所以为了实现队列，我们需要使用两个栈，经过两次 “逆转” 满足队列的正常操作顺序\n",
+    "# 将所有元素都时刻保存在栈 b 中，也即任何操作过后，要保证全部元素保存在栈 b 中\n",
+    "class MyQueue:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        Initialize your data structure here.\n",
+    "        \"\"\"\n",
+    "        self.a = []\n",
+    "        self.b = []\n",
+    "\n",
+    "\n",
+    "    def push(self, x: int) -> None:\n",
+    "        \"\"\"\n",
+    "        Push element x to the back of queue.\n",
+    "        \"\"\"\n",
+    "        while self.b:\n",
+    "            self.a.append(self.b.pop())\n",
+    "        self.a.append(x)\n",
+    "        while self.a:\n",
+    "            self.b.append(self.a.pop())\n",
+    "\n",
+    "\n",
+    "    def pop(self) -> int:\n",
+    "        \"\"\"\n",
+    "        Removes the element from in front of queue and returns that element.\n",
+    "        \"\"\"\n",
+    "        return self.b.pop()\n",
+    "\n",
+    "\n",
+    "    def peek(self) -> int:\n",
+    "        \"\"\"\n",
+    "        Get the front element.\n",
+    "        \"\"\"\n",
+    "        return self.b[-1] \n",
+    "\n",
+    "\n",
+    "    def empty(self) -> bool:\n",
+    "        \"\"\"\n",
+    "        Returns whether the queue is empty.\n",
+    "        \"\"\"\n",
+    "        return len(self.b) == 0\n"
+   ]
   }
  ]
 }
