--- a/leetcodes/linktable.ipynb
+++ b/leetcodes/linktable.ipynb
@@ -24,12 +24,12 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "遍历+迭代/递归: 206(反转) | 21(合并) | 剑指 Offer 06 从尾到头打印链表\n",
+    "遍历+迭代/递归: 206/92(反转) | 21(合并) | 剑指 Offer 06 从尾到头打印链表\n",
     "    迭代: 循环\n",
     "    递归: 边界条件\n",
     "    迭代遍历+双指针(查找): 160(两个链表) | 876/234/141/142(一个链表/快慢指针) | 剑指 Offer 22(一个链表/差距指针) | 19\n",
     "    链表的创建:\n",
-    "        利用伪头部: 21 | 25\n",
+    "        利用伪头部: 21 | 25 | 92\n",
     "        复制: 138\n",
     "'''"
    ]
@@ -80,6 +80,57 @@
     "    head.next = None\n",
     "\n",
     "    return p"
+   ]
+  },
+  {
+   "source": [
+    "### 92: 反转链表 II"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reverseBetween(self, head: ListNode, left: int, right: int) -> ListNode:\n",
+    "    def reverseList(head):\n",
+    "        prev = None\n",
+    "        curr = head\n",
+    "        while curr:\n",
+    "            temp = curr.next\n",
+    "            curr.next = prev\n",
+    "            prev = curr \n",
+    "            curr = temp\n",
+    "        return prev\n",
+    "\n",
+    "    dummy_node = ListNode(-1)\n",
+    "    dummy_node.next = head\n",
+    "    pre = dummy_node\n",
+    "    # 第 1 步：从虚拟头节点走 left - 1 步，来到 left 节点的前一个节点\n",
+    "    for _ in range(left - 1):\n",
+    "        pre = pre.next\n",
+    "\n",
+    "    # 第 2 步：从 pre 再走 right - left + 1 步，来到 right 节点\n",
+    "    right_node = pre\n",
+    "    for _ in range(right - left + 1):\n",
+    "        right_node = right_node.next\n",
+    "    # 第 3 步：切断出一个子链表（截取链表）\n",
+    "    left_node = pre.next\n",
+    "    curr = right_node.next\n",
+    "\n",
+    "    # 注意：切断链接\n",
+    "    pre.next = None\n",
+    "    right_node.next = None\n",
+    "\n",
+    "    # 第 4 步：反转链表的子区间\n",
+    "    reverseList(left_node)\n",
+    "    # 第 5 步：接回到原来的链表中\n",
+    "    pre.next = right_node\n",
+    "    left_node.next = curr\n",
+    "    return dummy_node.next"
    ]
   },
   {
