--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -773,7 +773,7 @@
     "tensor2 = torch.tensor([[0,1], [2,4], [1,2]])\n",
     "print(tensor1.shape)\n",
     "print(tensor2.shape)\n",
-    "# Matrix multiplication: (m*n) * (n*p) -> (m*p).  torch.matmul类似，不过torch.mm针对二维矩阵，torch.matmul是高维。当torch.mm用于大于二维时将报错。\n",
+    "# Matrix multiplication: (m*n) * (n*p) -> (m*p).  torch.matmul类似，不过torch.mm针对二维矩阵，torch.matmul是高维。当torch.mm用于大于二维时将报错。   | @\n",
     "result1 = torch.mm(tensor1, tensor2)\n",
     "print(result1.shape)\n",
     "\n",
