--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -866,12 +866,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'k': 1, 'k1': 2, 'k2': 3, 'k3': 4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 字典生成/推导式\n",
+    "## d = {key: value for (key, value) in iterable}\n",
+    "s = \"k:1|k1:2|k2:3|k3:4\"\n",
+    "d = {k:int(v) for t in s.split(\"|\") for k, v in (t.split(\":\"),)}\n",
+    "print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 字典生成/推导式\n",
-    "## d = {key: value for (key, value) in iterable}"
+    "# 字典按value值进行排序\n",
+    "# sorted(d.items(),key=lambda x:x[1]) # x[0]代表用key进行排序；x[1]代表用value进行排序"
    ]
   },
   {
@@ -1023,6 +1044,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 字符串前加u: 以Unicode格式进行编码，一般用在中文字符串前面，防止因为源码储存格式问题，导致再次使用时出现乱码\n",
+    "# 加r: 去掉反斜杠的转义机制，常用于正则表达式\n",
+    "# 加b: 表示这是一个bytes对象，网络编程中，服务器和浏览器只认bytes类型数据，如：send函数的参数和recv函数的返回值都是bytes类型\n",
+    "# 在 Python3 中，bytes和str的互相转换方式是\n",
+    "    # str.encode('utf-8')\n",
+    "    # bytes.decode('utf-8')"
+   ]
+  },
+  {
    "source": [
     "### 矩阵操作"
    ],
@@ -1095,7 +1130,15 @@
    "source": [
     "'''\n",
     "os.remove(file)\n",
-    "'''"
+    "'''\n",
+    "def print_directory_contents(sPath):\n",
+    "# 这个函数接收文件夹的名称作为输入参数，返回该文件夹中文件的路径以及其包含文件夹中文件的路径\n",
+    "    for s_child in os.listdir(s_path):\n",
+    "        s_child_path = os.path.join(s_path, s_child)\n",
+    "        if os.path.isdir(s_child_path):\n",
+    "            print_directory_contents(s_child_path)\n",
+    "        else:\n",
+    "            print(s_child_path)"
    ]
   },
   {
@@ -1107,7 +1150,25 @@
     "# 文件读写\n",
     "    # read 读取整个文件\n",
     "    # readline 读取下一行,使用生成器方法\n",
-    "    # readlines 读取整个文件到一个迭代器以供我们遍历"
+    "    # readlines 读取整个文件到一个迭代器以供我们遍历\n",
+    "def get_lines():\n",
+    "    with open('file.txt','rb') as f:\n",
+    "        return f.readlines()\n",
+    "# 现在要处理一个大小为10G的文件，但是内存只有4G  -->   需要分批读入，太小会在读取操作花费过多时间\n",
+    "def get_lines():\n",
+    "    with open('file.txt','rb') as f:\n",
+    "        for i in f:\n",
+    "            yield i\n",
+    "# 分批读入数据要记录每次读入数据的位置\n",
+    "from mmap import mmap # mmap是一种虚拟内存映射文件的方法，即将一个文件或者其它对象映射到进程的地址空间，实现文件磁盘地址和进程虚拟地址空间中一段虚拟地址的一一对映关系\n",
+    "def get_lines(fp):\n",
+    "    with open(fp,\"r+\") as f: # r是只读，r+是读写\n",
+    "        m = mmap(f.fileno(), 0) # 第一个参数是文件描述符，第二个参数是要映射文件部分的大小（以字节为单位），这个值为0，则映射整个文件，如果大小大于文件当前大小，则扩展这个文件\n",
+    "        tmp = 0\n",
+    "        for i, char in enumerate(m):\n",
+    "            if char==b\"\\n\":\n",
+    "                yield m[tmp:i+1].decode()\n",
+    "                tmp = i+1"
    ]
   },
   {
@@ -1146,6 +1207,70 @@
     "print('b = ', b)\n",
     "print('c = ', c)\n",
     "print('d = ', d)"
+   ]
+  },
+  {
+   "source": [
+    "### datetime"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "93"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "# 输入日期， 判断这一天是这一年的第几天？ 2019.4.3\n",
+    "def ymd():\n",
+    "    year = input(\"请输入年份: \")\n",
+    "    month = input(\"请输入月份: \")\n",
+    "    day = input(\"请输入天: \")\n",
+    "    date1 = datetime.date(year=int(year),month=int(month),day=int(day))\n",
+    "    date2 = datetime.date(year=int(year),month=1,day=1)\n",
+    "    return (date1-date2).days+1\n",
+    "ymd()"
+   ]
+  },
+  {
+   "source": [
+    "### random"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[2, 1, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "# 打乱一个排好序的list对象alist\n",
+    "alist = [1,2,3,4,5]\n",
+    "random.shuffle(alist)\n",
+    "print(alist)"
    ]
   },
   {
