--- a/pytorch/pytorch_cookbook.ipynb
+++ b/pytorch/pytorch_cookbook.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 1
+     "execution_count": 2
     }
    ],
    "source": [
@@ -584,6 +584,30 @@
     "    2、tensor.detach(): 共享内存; 不在计算图中\n",
     "    3、tensor.detach().clone(): 新内存; 不在计算图中\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor([[0., 0., 0., 0., 0., 0., 0., 0.],\n        [0., 0., 0., 0., 0., 0., 0., 0.],\n        [0., 0., 0., 0., 0., 0., 0., 0.]])\n**********\ntensor([[1., 1., 1., 1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1., 1., 1., 1.],\n        [1., 1., 1., 1., 1., 1., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = torch.Tensor(2, 3, 4)\n",
+    "t.resize_(3, 8)\n",
+    "t.zero_()\n",
+    "s = t.clone()\n",
+    "s.fill_(1)\n",
+    "print(t)\n",
+    "print(\"*\"*10)\n",
+    "print(s)"
    ]
   },
   {
