--- a/leetcodes/array_basic.ipynb
+++ b/leetcodes/array_basic.ipynb
@@ -10,9 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.6.13"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python3613jvsc74a57bd072506cc1e4b0dce5eb876f653d1c5faf29777724f7cbfb23a9a7a2a764425624",
+   "display_name": "Python 3.6.13 64-bit ('lnf': conda)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -26,6 +30,7 @@
     "'''\n",
     "1、排序\n",
     "    .sort(key)或sorted(): 905 | 937 | 179\n",
+    "    让所有奇数都在偶数前面，而且奇数升序排列，偶数降序排序，如字符串'1982376455',变成'1355798642'\n",
     "2、遍历\n",
     "    哈希表: 1 | 41(优化空间复杂度)\n",
     "    栈: 496(找右边第 1 个大于比自己大的数)(栈尾元素)\n",
@@ -101,6 +106,37 @@
     "def largestNumber(nums: List[int]) -> str:\n",
     "    ans = sorted(map(str, nums), key=cmp_to_key(lambda x,y: int(y+x)-int(x+y)))\n",
     "    return str(int(\"\".join(ans)))"
+   ]
+  },
+  {
+   "source": [
+    "### 所有奇数都在偶数前面，而且奇数升序排列，偶数降序排序"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1355798642\n1355798642\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(l):\n",
+    "    print(\"\".join(sorted(l, key=lambda x: int(x) % 2 == 0 and 20 - int(x) or int(x))))\n",
+    "def func1(l):\n",
+    "    def f(x):\n",
+    "        return (1, 10-int(x)) if int(x) % 2 == 0 else (0, int(x))\n",
+    "    print(\"\".join(sorted(l, key=f)))\n",
+    "func(s)\n",
+    "func1(s)"
    ]
   },
   {
