--- a/leetcodes/basics.ipynb
+++ b/leetcodes/basics.ipynb
@@ -644,7 +644,8 @@
     "        ## key仅仅支持一个参数\n",
     "        ## key如何对两个参数做对比: from functools import cmp_to_key，然后key = cmp_to_key(lambda x,y: ...)\n",
     "        ## 传入两个参数(x,y)对应于(self,other)，这里的self表示当前的数，而other是前面已经出现比较过的对象\n",
-    "# 关键字lambda表示匿名函数(和函数式编程有关)，冒号前面的x表示函数参数"
+    "# 关键字lambda表示匿名函数(和函数式编程有关)，冒号前面的x表示函数参数\n",
+    "    # 返回值可结合and和or进行条件选择"
    ]
   },
   {
@@ -705,6 +706,29 @@
     "print(reduce(lambda x,y:x*y,range(1,4))) # 求3的阶乘\n",
     "print(reduce(lambda x,y:x+y,range(1,4)))\n",
     "print(reduce(lambda x,y:x+y,range(1,4),10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Second_large_num is : 56\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lambda返回值可结合and和or进行条件选择\n",
+    "    # 找出一个整数数组中，第二大的数\n",
+    "    # 设置两个标志位一个存储最大数一个存储次大数\n",
+    "from functools import reduce\n",
+    "num_list = [34, 11, 23, 56, 78, 0, 9, 12, 3, 7, 5]\n",
+    "num = reduce(lambda ot, x: ot[1] < x and (ot[1], x) or ot[0] < x and (x, ot[1]) or ot, num_list, (0, 0))[0]\n",
+    "print(\"Second_large_num is :\", num)"
    ]
   },
   {
@@ -921,6 +945,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[3, 1, 2, 4]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 44
+    }
+   ],
+   "source": [
+    "# insert | pop\n",
+    "a = [1,2,3,4]\n",
+    "a.insert(0, a.pop(2))\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
@@ -1073,6 +1120,50 @@
    "source": [
     "# 字典按value值进行排序\n",
     "    # sorted(d.items(),key=lambda x:x[1]) # x[0]代表用key进行排序；x[1]代表用value进行排序"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(1, 2)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "# __getitem__\n",
+    "d = {'k': 1, 'k1': 2, 'k2': 3, 'k3': 4}\n",
+    "d['k'],d.__getitem__('k1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 从列表构建字典: fromkeys  |  可对列表进行去重\n",
+    "b = {}\n",
+    "a = [1,1,2,2,3]\n",
+    "b = b.fromkeys(a)\n",
+    "c = list(b.keys())\n",
+    "print(c)"
    ]
   },
   {
@@ -1728,6 +1819,30 @@
     "A=['a','b','b','c','d','b','a']\n",
     "c = collections.Counter(A)\n",
     "print(c)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('b', 3), ('a', 2)]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "source": [
+    "# Counter中值最大的前几个key\n",
+    "import collections\n",
+    "A=['a','b','b','c','d','b','a']\n",
+    "c = collections.Counter(A)\n",
+    "c.most_common(2)\n"
    ]
   },
   {
