--- a/tutorials/word_embedding/basics.ipynb
+++ b/tutorials/word_embedding/basics.ipynb
@@ -27,6 +27,13 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "## FastText"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
